--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="ui two column grid">
   <div class="twelve wide column">
-    <div class="ui fluid raised card chatbox">0
+    <div class="ui fluid raised card chatbox">
       <div class="content">
         <div class="ui feed">
           <%= render @messages %>
